--- a/HJ/temp_python.ipynb
+++ b/HJ/temp_python.ipynb
@@ -1092,6 +1092,387 @@
     "print(bfs(0,0))\n",
     "maps\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Naver NLP 인턴"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "defaultdict(None, {'r': 2, 'a': 1, 't': 1, 'h': 1, 'e': 1}) defaultdict(None, {'h': 1, 'a': 1, 'r': 2, 'd': 1, 'e': 1})\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "## 1 번\n",
+    "A,B = 'rather', 'harder'\n",
+    "from collections import defaultdict\n",
+    "def mkdic(a):\n",
+    "    dic=defaultdict()\n",
+    "    for i in a:\n",
+    "        if i in dic:\n",
+    "            dic[i]+=1\n",
+    "        else:\n",
+    "            dic[i] = 1\n",
+    "    return dic\n",
+    "def solution(A, B):\n",
+    "    answer = 0 \n",
+    "    adic=mkdic(A)\n",
+    "    bdic=mkdic(B)\n",
+    "    print(adic, bdic)\n",
+    "    for akey in adic:\n",
+    "        if akey in bdic :\n",
+    "            if adic[akey] >= bdic[akey]: continue\n",
+    "            else: answer += bdic[akey] - adic[akey]\n",
+    "        else:\n",
+    "            answer += adic[akey]\n",
+    "\n",
+    "    for bkey in bdic:\n",
+    "        if bkey in adic :\n",
+    "            if bdic[bkey] >= adic[bkey] : continue\n",
+    "            else: answer += adic[bkey] - bdic[bkey]\n",
+    "\n",
+    "        else:\n",
+    "            answer += bdic[bkey]\n",
+    "    return answer\n",
+    "\n",
+    "\n",
+    "\n",
+    "# solution(A,B)\n",
+    "# solution('apple','pear')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "defaultdict(None, {'r': 2, 'a': 1, 't': 1, 'h': 1, 'e': 1})"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "def mkdic(a):\n",
+    "    dic=defaultdict()\n",
+    "    for i in a:\n",
+    "        if i in dic:\n",
+    "            dic[i]+=1\n",
+    "        else:\n",
+    "            dic[i] = 1\n",
+    "    return dic\n",
+    "mkdic(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "left :  0 (\n\t   right :  6 (\n\t   right :  5 )\nminus\nleft :  1 (\n\t   right :  4 )\nminus\nleft :  2 )\nleft :  3 )\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 169
+    }
+   ],
+   "source": [
+    "# 2번\n",
+    "# from collections import deque\n",
+    "def solution(S):\n",
+    "    answer = 0\n",
+    "    left = 0\n",
+    "    right = len(S)-1\n",
+    "    opens = 0\n",
+    "    # find first part\n",
+    "    while left <= right:\n",
+    "        if S[left] == '(':\n",
+    "            opens+=1\n",
+    "        \n",
+    "        \n",
+    "        print('left : ',left, S[left])\n",
+    "        left+=1\n",
+    "        \n",
+    "        while opens>0 and left < right:\n",
+    "            print('\\t   right : ',right, S[right])\n",
+    "            if S[right] == ')':\n",
+    "                print('minus')\n",
+    "                opens -= 1\n",
+    "\n",
+    "            right -= 1\n",
+    "    \n",
+    "    return len(S[:left])\n",
+    "\n",
+    "\n",
+    "solution('(())))(')\n",
+    "# solution('))')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "left 1 right 2\nleft 2 right 2\nleft 3 right 2\n3 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def solution(S):\n",
+    "    answer = 0\n",
+    "    left = 0\n",
+    "    right = len(S)-1\n",
+    "    opens = 0\n",
+    "    # find first part\n",
+    "    while left <= right:\n",
+    "        \n",
+    "        if S[left]=='(':\n",
+    "            opens+=1\n",
+    "        left += 1\n",
+    "        \n",
+    "        while opens>0 and left<right:\n",
+    "            if S[right]==')':\n",
+    "                opens -= 1\n",
+    "                # right+=1\n",
+    "            right -= 1\n",
+    "    \n",
+    "        print('left',left, 'right',right)\n",
+    "    print(left, right)\n",
+    "        \n",
+    "\n",
+    "            \n",
+    "\n",
+    "\n",
+    "# solution('((')\n",
+    "# solution('(())))(')\n",
+    "solution('(())')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 148
+    }
+   ],
+   "source": [
+    "# '1'.isdigit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'1B 2C': [4, [[0, 1], [1, 2], [0, 2], [1, 1]]], ' 2D 4D': [3, [[1, 3], [3, 3], [2, 3]]]}\n2B [1, 1]\n2D [1, 3]\n3D [2, 3]\n4D [3, 3]\n4A [3, 0]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'1,1'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 163
+    }
+   ],
+   "source": [
+    "# 3번\n",
+    "def splitalpha(s):\n",
+    "    digit=''\n",
+    "    alpha=''\n",
+    "    for i in s:\n",
+    "        if i.isdigit():\n",
+    "            digit+=i\n",
+    "        else:\n",
+    "            alpha+=i\n",
+    "    return int(digit), alpha\n",
+    "def solution(N, S, T):\n",
+    "    \n",
+    "    sunked,hits = 0,0 # 맞고나서도 살아있는 녀석만\n",
+    "    cols = {v:i for i,v in enumerate('ABCDEFGHIJKLMNOPQRSTUVWXYZ')}\n",
+    "    \n",
+    "    # maps=[[0 for _ in range(N)] for _ in range(N)]\n",
+    "    hitted=set()\n",
+    "    shipdic={}\n",
+    "    for ships in S.split(','):\n",
+    "        tmppoint=[]\n",
+    "        for st in ships.split(): # GET SHIP POINT\n",
+    "            x,y=splitalpha(st)\n",
+    "            tmppoint.append( [x-1, cols[y]] )\n",
+    "        \n",
+    "        # GET SHIP MATRIX\n",
+    "        if tmppoint[0]==tmppoint[1]: # 1점만있을 떄\n",
+    "            tmppoint.pop()\n",
+    "\n",
+    "        elif tmppoint[0][0] != tmppoint[1][0] and tmppoint[0][1] != tmppoint[1][1]:# 2d \n",
+    "            tmppoint.append( [tmppoint[0][0], tmppoint[1][1]] )\n",
+    "            tmppoint.append( [tmppoint[1][0], tmppoint[0][1]] )\n",
+    "        \n",
+    "        elif tmppoint[0][0] == tmppoint[1][0] : # 1d X axis\n",
+    "            for i in range(tmppoint[0][1]+1, tmppoint[1][1]):\n",
+    "                tmppoint.append([tmppoint[0][0], i])\n",
+    "        \n",
+    "        elif tmppoint[0][1] == tmppoint[1][1] : # 1d Y axis\n",
+    "            for i in range(tmppoint[0][0]+1, tmppoint[1][0]):\n",
+    "                tmppoint.append([i, tmppoint[0][1]])\n",
+    "\n",
+    "        shipdic[ships] = [len(tmppoint), tmppoint]\n",
+    "    \n",
+    "    print(shipdic)\n",
+    "\n",
+    "    for hit in T.split():\n",
+    "        x,y=splitalpha(hit)\n",
+    "        point = [x-1, cols[y]] \n",
+    "        \n",
+    "        print(hit,point)\n",
+    "    \n",
+    "        for ship in shipdic:\n",
+    "            if point in shipdic[ship][1]:\n",
+    "                shipdic[ship][0]-=1\n",
+    "                hitted.add(ship)\n",
+    "    \n",
+    "    for hit in hitted:\n",
+    "        if shipdic[hit][0]==0:\n",
+    "            sunked+=1\n",
+    "        else:\n",
+    "            hits+=1\n",
+    "            \n",
+    "    return f'{sunked},{hits}'\n",
+    "\n",
+    "\n",
+    "\n",
+    "N=4\n",
+    "S='1B 2C, 2D 4D'\n",
+    "T='2B 2D 3D 4D 4A'\n",
+    "\n",
+    "# N=12\n",
+    "# S='1A 2A, 12A 12A'\n",
+    "# T='12A'\n",
+    "solution(N,S,T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
