2018KAKAO_1차_셔틀버스

--- a/HJ/Algorithm/Dijkstra.ipynb
+++ b/HJ/Algorithm/Dijkstra.ipynb
@@ -72,6 +72,45 @@
     "]\n",
     "dijkstra(mkgraph(costs),1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from heapq import *\n",
+    "def dijkstra(graph,start):\n",
+    "    INF = int(1e9)\n",
+    "    distances={i : INF for i in graph}\n",
+    "    frt={i:0 for i in graph}\n",
+    "    distances[start]=0\n",
+    "    frt[start]=start\n",
+    "    q = [[0,start]]\n",
+    "    while q:\n",
+    "        dist,now = heappop(q)\n",
+    "        for node,n_dist in graph[now]:\n",
+    "            new_dist = dist+n_dist\n",
+    "            if new_dist<distances[node]:\n",
+    "                distances[node] = new_dist\n",
+    "                frt[node] = now\n",
+    "                heappush(q, [new_dist,node])\n",
+    "    return distances, frt\n",
+    "\n",
+    "def getRoute(frtable,st,fr):\n",
+    "    tmp=[]\n",
+    "    while st!=fr:\n",
+    "        tmp.append(fr)\n",
+    "        fr=frtable[fr]\n",
+    "    ans=[st,]\n",
+    "    while tmp:\n",
+    "        ans.append(tmp.pop())\n",
+    "    return ans\n",
+    "\n",
+    "graph = mkgraph(costs)\n",
+    "dist, frtable = dijkstra(graph,1)\n",
+    "getRoute(frtable,1,5)"
+   ]
   }
  ]
 }
