--- a/HJ/Algorithm/Union_Find_Algorithm.ipynb
+++ b/HJ/Algorithm/Union_Find_Algorithm.ipynb
@@ -14,8 +14,11 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python385jvsc74a57bd039a3f6769e595a50e593a296d8b0c78e5171348aaba449e974344d6732d07a14",
+   "name": "python3",
    "display_name": "Python 3.8.5 64-bit ('base': conda)"
+  },
+  "interpreter": {
+   "hash": "39a3f6769e595a50e593a296d8b0c78e5171348aaba449e974344d6732d07a14"
   }
  },
  "nbformat": 4,
@@ -23,7 +26,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -37,18 +40,18 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "([0, 1, 8, 2, 2, 2, 2, 2, 8, 8], [0, 0, 1, 0, 0, 0, 0, 0, 2, 0])"
+       "[0, 1, 2, 2, 2, 2, 2, 2, 2, 8]"
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 3
     }
    ],
    "source": [
     "MAX_SIZE = 10\n",
     "\n",
     "parent = [i for i in range(MAX_SIZE)] #각자 자신의 부모를 가리킴\n",
-    "rank = [0 for i in range(MAX_SIZE)] # 각자 자신의 높이를 나타냄\n",
+    "# rank = [0 for i in range(MAX_SIZE)] # 각자 자신의 높이를 나타냄\n",
     "\n",
     "def find(x):\n",
     "    if parent[x] == x:\n",
@@ -63,12 +66,13 @@
     "    x = find(x)\n",
     "    y = find(y)\n",
     "    if x==y: return\n",
-    "    if rank[x] < rank[y]: # union by rank\n",
-    "        parent[x] = y\n",
-    "    else:\n",
-    "        parent[y] = x\n",
-    "    if rank[x]==rank[y]:\n",
-    "        rank[x]+=1\n",
+    "    parent[max(x,y)] = min(x,y)\n",
+    "    # if rank[x] < rank[y]: # union by rank\n",
+    "    #     parent[x] = y\n",
+    "    # else:\n",
+    "    #     parent[y] = x\n",
+    "    # if rank[x]==rank[y]:\n",
+    "    #     rank[x]+=1\n",
     "\n",
     "print(parent)\n",
     "union(2,3)\n",
@@ -78,7 +82,7 @@
     "union(8,9)\n",
     "union(6,7)\n",
     "union(8,2)\n",
-    "parent , rank\n",
+    "parent \n",
     "\n"
    ]
   },
