--- a/HJ/tempMAC.ipynb
+++ b/HJ/tempMAC.ipynb
@@ -86,10 +86,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2\n3\n5\n7\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[0, 10000, 1, 1, 2, 1, 2, 1, 2, 2, 2, 3, 2, 3]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 33
+    }
+   ],
+   "source": [
+    "def solution(coins, m):\n",
+    "    dp=[10000]*(m+1)\n",
+    "    coins = sorted(coins)\n",
+    "    dp[0]=0\n",
+    "    for coin in coins:\n",
+    "        print(coin)\n",
+    "        for j in range(coin,m+1):\n",
+    "            # if dp[j-coin]<10000:\n",
+    "            dp[j] = min(dp[j], dp[j-coin]+1)\n",
+    "        \n",
+    "    return dp\n",
+    "\n",
+    "solution([2,3,5,7],13)"
+   ]
   },
   {
    "cell_type": "code",
