디스크컨트롤러

--- a/HJ/tempWin.ipynb
+++ b/HJ/tempWin.ipynb
@@ -1,28 +1,4 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
-  },
-  "orig_nbformat": 4,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)"
-  },
-  "interpreter": {
-   "hash": "39a3f6769e595a50e593a296d8b0c78e5171348aaba449e974344d6732d07a14"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
@@ -30,7 +6,6 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "defaultdict(list,\n",
@@ -42,8 +17,9 @@
        "             5: [[3, 1], [6, 2]]})"
       ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "execution_count": 2
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -67,14 +43,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[1, 4, 5]"
       ]
      },
+     "execution_count": 14,
      "metadata": {},
-     "execution_count": 14
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -118,21 +94,21 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "{1: 0, 2: 1, 3: 1, 4: 1, 5: 2} {1: 1, 2: 1, 3: 1, 4: 1, 5: 3}\n"
      ]
     },
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "3"
       ]
      },
+     "execution_count": 19,
      "metadata": {},
-     "execution_count": 19
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -181,21 +157,21 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "[[0, 1000000000, 1, 1000000000], [1000000000, 0, 1000000000, 1], [1, 1000000000, 0, 1000000000], [1000000000, 1, 1000000000, 0]]\n"
      ]
     },
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "-1"
       ]
      },
+     "execution_count": 34,
      "metadata": {},
-     "execution_count": 34
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -241,21 +217,21 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "{0: 1000000000, 1: 0, 2: 4, 3: 2} {0: False, 1: 1, 2: 1, 3: 1}\n"
      ]
     },
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "4"
       ]
      },
+     "execution_count": 46,
      "metadata": {},
-     "execution_count": 46
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -336,14 +312,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "3600"
       ]
      },
+     "execution_count": 65,
      "metadata": {},
-     "execution_count": 65
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -360,21 +336,21 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "deque([])\n"
      ]
     },
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "'18:00'"
       ]
      },
+     "execution_count": 134,
      "metadata": {},
-     "execution_count": 134
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -420,6 +396,440 @@
     "n,t,m,timetable=10,60,45,[\"23:59\",\"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\"]#\"18:00\"\n",
     "solution(n,t,m,timetable)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([0, 1, 2, 3, 4, 5], {'a': 0, 'b': 1, 'c': 2, 'f': 3, 'g': 4, 't': 5})"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(stats):\n",
+    "    def check(stats):\n",
+    "        \n",
+    "        pass\n",
+    "    \n",
+    "    answer=''\n",
+    "    sets=set()\n",
+    "    for i in stats:\n",
+    "        sets.add(i[0])\n",
+    "        sets.add(i[1])\n",
+    "    sets= {v:i for i,v in enumerate(sorted(sets))}\n",
+    "    parents = [sets[i] for i in sets]\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    return parents, sets\n",
+    "stats = ['ab','bc','ca','fg','gt']\n",
+    "solution(stats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['NO', 'NO', 'YES']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 이코테 - 팀결성\n",
+    "n,teams = 7,[[0,1,3],[1,1,7],[0,7,6],[1,7,1],[0,3,7],[0,4,2],[0,1,1],[1,1,1]]\n",
+    "def solution(teams=teams):\n",
+    "    def union(lead,a,b):\n",
+    "        fa=find(lead,a)\n",
+    "        fb=find(lead,b)\n",
+    "        if a>b:\n",
+    "            lead[a] = fb\n",
+    "        else:\n",
+    "            lead[b] = fa \n",
+    "    def find(lead, a):\n",
+    "        if lead[a] != a:\n",
+    "            lead[a] = find(lead, lead[a])\n",
+    "        else:\n",
+    "            return a\n",
+    "    # teams[0]의 0:합치기연산 , 1:같은 집합인지 체크\n",
+    "    answer=[]\n",
+    "    lead=[i for i in range(n+1)]\n",
+    "    for check, a,b in teams:\n",
+    "        if check: # 같은집합인지체크\n",
+    "            if find(lead,a)==find(lead,b): answer.append('YES')\n",
+    "            else: answer.append('NO')\n",
+    "        else: # 같은집합으로 합치기\n",
+    "            union(lead,a,b)\n",
+    "\n",
+    "    return answer\n",
+    "\n",
+    "solution()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 4 1\n",
+      "3 2 1\n",
+      "1 6 2\n",
+      "2 5 2\n",
+      "1 3 2\n",
+      "6 7 4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 이코테 - 도시분할계획 (300p)\n",
+    "# def mkgraph(roads):\n",
+    "#     graph={}\n",
+    "#     return graph\n",
+    "def solution(n,m,roads):\n",
+    "    def find(parents,x):\n",
+    "        if x==parents[x]:\n",
+    "            return x\n",
+    "        else:\n",
+    "            parents[x] = find(parents, parents[x])\n",
+    "            return parents[x]\n",
+    "    def union(parents, a,b):\n",
+    "        a=find(parents,a)\n",
+    "        b=find(parents,b)\n",
+    "        if a>b: parents[a]=b\n",
+    "        else:parents[b]=a\n",
+    "    # 어짜피 스패닝트리를 만들어놓고, 그 스패닝트리 안에서 가장 비싼 간선 하나 삭제하면, 두 그룹으로 나뉜다!\n",
+    "    parents=[i for i in range(n+1)]\n",
+    "    roads = sorted(roads, key=(lambda x: x[-1]), reverse=True)\n",
+    "    answer=0\n",
+    "    last=0\n",
+    "    while roads:\n",
+    "        a,b,cost = roads.pop()\n",
+    "        if find(parents,a) != find(parents,b):\n",
+    "            print(a,b,cost)\n",
+    "            union(parents,a,b)\n",
+    "            answer+=cost\n",
+    "            last = cost\n",
+    "        else:\n",
+    "            continue\n",
+    "    # print(parents[1:])\n",
+    "    return answer - last\n",
+    "# n개의 집, m개의 길(양방향), [from, to, cost]\n",
+    "# 집의 그룹을 2개로 나눔 (각 그룹내 집은 서로 오갈수있는 경로가 존재, 각 그룹 집들 사이의 최소 경로로 )\n",
+    "n,m,roads=7,12,[[1,2,3],[1,3,2],[3,2,1],[2,5,2],[3,4,4],[7,3,6],[5,1,5],[1,6,2],[6,4,1],[6,5,3],[4,5,3],[6,7,4]]\n",
+    "solution(n,m,roads)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 5, 3, 6, 4, 7]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "([0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " {0: [], 1: [2, 5], 2: [3, 6], 3: [4], 4: [7], 5: [6], 6: [4], 7: []})"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "# Topology Sort (위상정렬)\n",
+    "\n",
+    "nodes, edges = 7,[[1,2],[1,5],[2,3],[2,6],[3,4],[4,7],[5,6],[6,4]]\n",
+    "def Topology_Sort(nodes,edges):\n",
+    "    # 진입차수별 소팅, 매 iter마다 진입차수 0 인 노드 꺼내기\n",
+    "    result = [] # 진행결과\n",
+    "    graph={i:[] for i in range(nodes+1)} # 실제 그래프로 사용할 부분\n",
+    "    indegree = [0 for i in range(nodes+1)] # 진입차수를 기록\n",
+    "    q = deque() # Queue로 사용\n",
+    "    for edge in edges: # 그래프, 진입차수 초기화\n",
+    "        indegree[edge[1]]+=1 \n",
+    "        graph[edge[0]].append(edge[1])\n",
+    "    for i in range(1,nodes+1): # 진입차수 0인것 queue에 추가\n",
+    "        if indegree[i]==0:\n",
+    "            q.append(i)\n",
+    "    \n",
+    "    while q: \n",
+    "        # 매 순간 q에서 뽑아서, 결과에 붙이고, \n",
+    "        now = q.popleft()\n",
+    "        result.append(now)\n",
+    "\n",
+    "        # now에서 진입하는 녀석 graph[now] 들 차수 1 감소,  \n",
+    "        # 그녀석의 진입차수가 0이 되었다면 q에 추가\n",
+    "        for i in graph[now]:\n",
+    "            indegree[i]-=1\n",
+    "            if indegree[i]==0: q.append(i)\n",
+    "\n",
+    "    print(result)\n",
+    "    return indegree, graph\n",
+    "\n",
+    "\n",
+    "Topology_Sort(nodes,edges)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 20, 14, 18, 17]"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 이코테 - 커리큘럼 (303p)\n",
+    "# 강의시간, 선수과목s, -1 (끝)\n",
+    "from collections import deque\n",
+    "N, subjects=5,[[10,-1],[10,1,-1],[4,1,-1],[4,3,1,-1],[3,3,-1]] # 1번부터 5번까지인 강의들을 뜻함\n",
+    "\n",
+    "def solution(N,subjects):\n",
+    "    answer=0\n",
+    "    # costs={(i+1):subjects[i][0] for i in range(N)}\n",
+    "    costs=[0]+[subjects[i][0] for i in range(N)]\n",
+    "    indegree=[0 for i in range(N+1)]\n",
+    "    graph={(i+1):[] for i in range(N)}\n",
+    "    for i in range(N):\n",
+    "        prep=subjects[i][1:-1]\n",
+    "        for pre in prep:\n",
+    "            graph[pre].append(i+1)\n",
+    "            indegree[i+1]+=1\n",
+    "    q = deque()\n",
+    "    for i in range(N+1):\n",
+    "        if i==0: continue\n",
+    "        if indegree[i]==0:\n",
+    "            q.append(i)\n",
+    "    \n",
+    "    results=costs[:]\n",
+    "\n",
+    "    while q:\n",
+    "        now = q.popleft()\n",
+    "        if graph.get(now):\n",
+    "            for i in graph[now]:\n",
+    "                results[i] = max(results[i], results[now] + costs[i])\n",
+    "                indegree[i] -= 1\n",
+    "                if indegree[i]==0:\n",
+    "                    q.append(i)\n",
+    "    return results[1:]\n",
+    "solution(N,subjects)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 start\n",
+      "1\n",
+      "2 start\n",
+      "2\n",
+      "1\n",
+      "3 start\n",
+      "3\n",
+      "1\n",
+      "4 start\n",
+      "4\n",
+      "3\n",
+      "1\n",
+      "5 start\n",
+      "5\n",
+      "3\n",
+      "[0, 10, 20, 14, 28, 17]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "({1: [], 2: [1], 3: [1], 4: [3, 1], 5: [3]}, [0, 10, 10, 4, 4, 3])"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(N,subjects): # 이코테 커리큘럼 달리풀어보기 -> 오답됨..\n",
+    "    def dfs_st(graph, costs, start):\n",
+    "        stack=[start]\n",
+    "        answer=0\n",
+    "        while stack:\n",
+    "            now = stack.pop()\n",
+    "            answer+=costs[now]\n",
+    "            if graph.get(now):\n",
+    "                stack.extend(graph[now])\n",
+    "        return answer\n",
+    "    answers=[0 for i in range(N+1)]\n",
+    "    costs=[0]+[subjects[i][0] for i in range(N)]\n",
+    "    graph={(i+1):[] for i in range(N)}\n",
+    "    \n",
+    "    for i in range(N):\n",
+    "        prep=subjects[i][1:-1]\n",
+    "        for pre in prep:\n",
+    "            graph[i+1].append(pre)\n",
+    "\n",
+    "    for i in range(N+1):\n",
+    "        if i==0:continue\n",
+    "        print(i, 'start')\n",
+    "        tmp = [i]\n",
+    "        if graph.get(i):\n",
+    "            tmp.extend(graph[i])\n",
+    "        for pre in tmp:\n",
+    "            print(pre)\n",
+    "            # answers[i]+=costs[pre]\n",
+    "            answers[i] = dfs_st(graph,costs,i)\n",
+    "    print(answers)\n",
+    "    return graph, costs\n",
+    "solution(N,subjects)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([]) [[6, 2], [9, 1]] 3\n",
+      "deque([]) [[9, 1]] 9\n",
+      "deque([]) [] 18\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from heapq import *\n",
+    "from collections import deque\n",
+    "def solution(jobs):\n",
+    "    jobs = deque(sorted(jobs))\n",
+    "    waited=0\n",
+    "    n=0\n",
+    "    cnt=jobs[0][0] # 첫 작업 도착시간으로 세팅\n",
+    "    a,b = jobs.popleft()\n",
+    "    hq=[[b,a]]\n",
+    "    time=0\n",
+    "    while hq or jobs:\n",
+    "        if hq:\n",
+    "            n+=1 # job개수카운트\n",
+    "            jobtime,come = heappop(hq) # 작업시간 , 도착시간\n",
+    "            cnt += jobtime \n",
+    "            waited+=(cnt-come)\n",
+    "        else:\n",
+    "            cnt+=1\n",
+    "        while jobs:\n",
+    "            if jobs[0][0]<=cnt:\n",
+    "                nextjob = jobs.popleft()\n",
+    "                heappush(hq, [nextjob[1], nextjob[0]])\n",
+    "            else:\n",
+    "                break\n",
+    "        \n",
+    "        print(jobs, hq, cnt)\n",
+    "    return waited//n\n",
+    "\n",
+    "# jobs=[[24, 10], [28, 39], [43, 20], [37, 5], [47, 22], [20, 47], [15, 34], [15, 2], [35, 43], [26, 1]]\n",
+    "jobs=[[0,3],[1,9],[2,6]]\n",
+    "solution(jobs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
- ]
+ ],
+ "metadata": {
+  "interpreter": {
+   "hash": "fadc0cf148511e913432907e7552089c1c0a3aee5ad75d70a741eb25cd3cd508"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.0 64-bit ('codestates': conda)",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
+  },
+  "orig_nbformat": 4
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
