--- a/HJ/tempMAC.ipynb
+++ b/HJ/tempMAC.ipynb
@@ -1,28 +1,4 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
-  },
-  "orig_nbformat": 4,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)"
-  },
-  "interpreter": {
-   "hash": "39a3f6769e595a50e593a296d8b0c78e5171348aaba449e974344d6732d07a14"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
@@ -30,14 +6,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "2"
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "execution_count": 5
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -62,14 +38,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "8"
       ]
      },
+     "execution_count": 7,
      "metadata": {},
-     "execution_count": 7
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -90,21 +66,24 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "2\n3\n5\n7\n"
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n"
      ]
     },
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[0, 10000, 1, 1, 2, 1, 2, 1, 2, 2, 2, 3, 2, 3]"
       ]
      },
+     "execution_count": 33,
      "metadata": {},
-     "execution_count": 33
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -139,7 +118,6 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[[-1, 1, 0, 0, 0, 2, -1, 2, 0],\n",
@@ -153,8 +131,9 @@
        " [0, 0, 1, 2, 3, -1, 1, 0, 0]]"
       ]
      },
+     "execution_count": 11,
      "metadata": {},
-     "execution_count": 11
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -203,21 +182,21 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "{1: 2, 2: 7, 4: 5, 5: -2}\n"
      ]
     },
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "2"
       ]
      },
+     "execution_count": 113,
      "metadata": {},
-     "execution_count": 113
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -284,14 +263,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "4"
       ]
      },
+     "execution_count": 112,
      "metadata": {},
-     "execution_count": 112
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -327,10 +306,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 이코테 문자열뒤집기 - 313페이지\n",
+    "# 1을 0으로 또는 0을 1으로 해서 모든 숫자를 같게 만들기 (0,1로만 이루어짐), \n",
+    "# 한 카운트는 한번에 연속된 하나이상의 숫자를 잡고 모두 뒤집는것... 이때 카운트 수 return하기\n",
+    "def solution(s):\n",
+    "    def flip(ss, n):\n",
+    "        cnt=0\n",
+    "        s=ss[:]\n",
+    "        l,r=0,0\n",
+    "        while r < len(s):\n",
+    "            if s[r]==n:\n",
+    "                print(l,r,s[r],'Go')\n",
+    "                r+=1\n",
+    "                l+=1\n",
+    "            else:\n",
+    "                while r<len(s) and s[r]!=n:\n",
+    "                    r+=1\n",
+    "                print(l,r,'Cnt++')\n",
+    "                cnt+=1\n",
+    "                l=r\n",
+    "        return cnt\n",
+    "    answer=0\n",
+    "    count = min(flip(s, '0'), flip(s,'1'))\n",
+    "    return count\n",
+    "\n",
+    "def solution(s):\n",
+    "    cnt0=0\n",
+    "    cnt1=0\n",
+    "    if s[0]=='1':\n",
+    "        cnt0+=1\n",
+    "    else:\n",
+    "        cnt1+=1\n",
+    "    for i in range(len(s)-1):\n",
+    "        if s[i] != s[i+1]:\n",
+    "            if s[i+1]=='1': cnt0+=1\n",
+    "            else:cnt1+=1\n",
+    "    print(cnt0, cnt1)\n",
+    "\n",
+    "s='0001100'\n",
+    "solution(s)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 만들 수 없는 금액 314p\n",
+    "# coins들로 만들 수 없는 최소 금액 찾기\n",
+    "def solution(coins):\n",
+    "    coins = sorted(coins)\n",
+    "    cnt=1\n",
+    "    for i in coins:\n",
+    "        if i>cnt:\n",
+    "            break\n",
+    "        cnt+=i\n",
+    "    return cnt\n",
+    "coins=[3,2,1,1,9]\n",
+    "solution(coins)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 3: 2, 2: 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 볼링공고르기 (315)\n",
+    "# m:볼링공의 최대 무게\n",
+    "# balls : 볼링공들 , 서로 무게가 다른 볼링공을 고르는 경우의수\n",
+    "def solution(balls):\n",
+    "    answer=0\n",
+    "    for i in range(len(balls)):\n",
+    "        for j in range(len(balls)):\n",
+    "            if balls[i]!=balls[j] and i!=j:\n",
+    "                answer+=1\n",
+    "    return answer//2\n",
+    "def solution(balls):\n",
+    "    answer=0\n",
+    "    balldic={}\n",
+    "    for i in balls:\n",
+    "        if i in balldic:\n",
+    "            balldic[i]+=1\n",
+    "        else:\n",
+    "            balldic[i]=1\n",
+    "    print(balldic)\n",
+    "    \n",
+    "\n",
+    "m,balls=3,[1,3,2,3,2]\n",
+    "# m,balls=5,[1,5,4,3,2,4,5,2]\n",
+    "solution(balls)"
+   ]
   }
- ]
+ ],
+ "metadata": {
+  "interpreter": {
+   "hash": "cb21448086e1b039f0143f4b6f3949a0ab18b782485cd082e49e693fdc0e34f1"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.4 64-bit ('base': conda)",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  },
+  "orig_nbformat": 4
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
